stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -13,6 +13,7 @@ models:
     fields:
       - name: template
         type: string
+        label: template
       - name: slug
         type: slug
       - name: title
