--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -20,4 +20,4 @@ models:
       - name: title
         type: string
         label: title
-    match: src/content/pages/about.md
+    match: src/content/pages/about.md; about.md
