stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -56,5 +56,5 @@ models:
       - name: title
         type: string
         label: title
-      - name: ''
+      - name: tagline
         type: string
