stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -58,5 +58,5 @@ models:
         label: title
       - name: tagline
         type: string
-      - name: ''
+      - name: featuredImage
         type: string
