--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -61,5 +61,5 @@ models:
       - name: featuredImage
         type: image
         label: featuredImage
-      - name: ''
+      - name: cta
         type: string
