stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -62,4 +62,5 @@ models:
         type: image
         label: featuredImage
       - name: cta
-        type: string
+        type: object
+        fields: []
