stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -70,7 +70,7 @@ models:
     type: object
     label: cta
     fields:
-      - name: text
+      - name: ctaText
         type: string
         label: text
       - name: ctaLink
