stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -72,7 +72,7 @@ models:
     fields:
       - name: ctaText
         type: string
-        label: text
+        label: ctaText
       - name: ctaLink
         type: url
         label: ctaLink
