stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -63,9 +63,9 @@ models:
         type: image
         label: featuredImage
       - name: cta
-        type: object
-        fields: []
+        type: model
         label: cta
+        models: []
   cta:
     type: object
     label: cta
