stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -84,8 +84,9 @@ models:
     match:
       - socialmedia.json
     fields:
-      - name: ''
+      - name: socialIcons
         type: string
+        label: ''
   socialicon:
     type: object
     label: socialicon
