--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -85,10 +85,9 @@ models:
       - socialmedia.json
     fields:
       - name: socialIcons
-        type: list
+        type: model
         label: socialIcons
-        items:
-          type: string
+        models: []
   socialicon:
     type: object
     label: socialicon
