stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -77,7 +77,7 @@ models:
       - name: ctaLink
         type: url
         label: ctaLink
-  '':
+  social:
     type: data
     label: ''
     fields: []
