--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -91,4 +91,8 @@ models:
     type: data
     label: social
     folder: src/util
-    match: socialmedia.json
+    match:
+      - socialmedia.json
+    fields:
+      - name: ''
+        type: string
