stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -100,5 +100,7 @@ models:
         options:
           - label: icon
             value: icon
+          - label: url
+            value: url
           - label: ''
             value: ''
