--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -98,7 +98,5 @@ models:
         type: enum
         label: socialIcons
         options:
-          - label: icon
-            value: icon
-          - label: ''
-            value: ''
+          - icon
+          - url
