stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -98,4 +98,5 @@ models:
         type: enum
         label: socialIcons
         options:
-          - url
+          - label: ''
+            value: ''
