stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -95,6 +95,5 @@ models:
       - socialmedia.json
     fields:
       - name: socialIcons
-        type: object
+        type: slug
         label: socialIcons
-        fields: []
