stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -92,4 +92,6 @@ models:
     label: socs
     fields:
       - name: ''
-        type: string
+        type: list
+        items:
+          type: string
