--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -96,6 +96,7 @@ models:
         items:
           type: string
         label: icon
+        required: true
     folder: src/util
     match:
       - socialmedia.json
