stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -91,7 +91,7 @@ models:
     type: data
     label: socs
     fields:
-      - name: socialIcons
+      - name: icon
         type: list
         items:
           type: string
