stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -92,8 +92,9 @@ models:
     label: socs
     fields:
       - name: icon
-        type: file
+        type: model
         label: icon
+        models: []
     folder: src/util
     match:
       - socialmedia.json
