stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -92,8 +92,10 @@ models:
     label: socs
     fields:
       - name: icon
-        type: markdown
+        type: list
         label: icon
+        items:
+          type: string
     folder: src/util
     match:
       - socialmedia.json
