--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -95,7 +95,8 @@ models:
         type: list
         label: icon
         items:
-          type: string
+          type: object
+          fields: []
     folder: src/util
     match:
       - socialmedia.json
