stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -93,7 +93,7 @@ models:
     fields:
       - name: socialIcons
         type: list
-        label: icon
+        label: socialIcons
         items:
           type: object
           fields: []
