stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -68,7 +68,8 @@ models:
         models:
           - cta
       - name: socialMedia
-        type: string
+        type: model
+        models: []
   cta:
     type: object
     label: cta
