--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -68,10 +68,8 @@ models:
         models:
           - cta
       - name: socialMedia
-        type: reference
+        type: slug
         label: socialMedia
-        models:
-          - socs
   cta:
     type: object
     label: cta
