stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -68,7 +68,7 @@ models:
         models:
           - cta
       - name: socialMedia
-        type: slug
+        type: markdown
         label: socialMedia
   cta:
     type: object
