stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -72,7 +72,8 @@ models:
         label: socialMedia
         items:
           type: model
-          models: []
+          models:
+            - socialicon
   cta:
     type: object
     label: cta
