--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -8,7 +8,7 @@ publishDir: public
 staticDir: static
 uploadDir: assets
 pagesDir: src/content/pages
-dataDir: src/
+dataDir: src/util
 models:
   about:
     type: page
