stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -70,6 +70,7 @@ models:
       - name: socialIcons
         type: reference
         models: []
+        label: socialIcons
   cta:
     type: object
     label: cta
