stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -100,9 +100,7 @@ models:
         type: list
         label: socialIcons
         items:
-          type: model
-          models:
-            - socialicon
+          type: string
     folder: src/util
     match:
       - socialmedia.json
