stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -101,6 +101,8 @@ models:
         label: socialIcons
         items:
           type: string
+      - name: ''
+        type: string
     folder: src/util
     match:
       - socialmedia.json
