stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -100,8 +100,8 @@ models:
         type: list
         label: socialIcons
         items:
-          type: object
-          fields: []
+          type: model
+          models: []
     folder: src/util
     match:
       - socialmedia.json
