--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -101,7 +101,8 @@ models:
         label: socialIcons
         items:
           type: model
-          models: []
+          models:
+            - socialicon
     folder: src/util
     match:
       - socialmedia.json
