--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -71,6 +71,7 @@ models:
         type: reference
         models:
           - socs
+          - index
         label: socialIcons
   cta:
     type: object
